# RAGGuard

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
config/: mask_patterns.yaml  rules.yaml
docs/: DESIGN_NOTES.md  RELEASE_CHECKLIST_V0.10.0.md  USAGE.md
src/ragguard/: __init__.py  __main__.py  approval_enforcement.py  approval_workflow.py  benchmark.py  cli.py  compatibility.py  compatibility_harness.py  compatibility_integration.py  config_loader.py  detectors.py  http_client.py  http_contract.py  http_transport.py  masked_document_checker.py  production_registry.py  profile_approval.py  report.py  retrieval.py  utils.py  validation_report.py
tests/: test_approval_enforcement_security_e2e.py  test_benchmark.py  test_compatibility_contract.py  test_compatibility_mapping_contract.py  test_compatibility_profile_integration_e2e.py  test_fake_loopback_http_contract.py  test_http_transport_contract.py  test_http_transport_security_e2e.py  test_local_rag_e2e.py  test_masked_document_checker.py  test_production_registry_contract.py  test_profile_approval_contract.py  test_retrieval_contract.py  test_synthetic_approval_workflow.py  test_synthetic_compatibility_harness.py  test_v010_release_preparation.py  test_validation_report_contract.py
tests/fixtures/benchmark/: queries.jsonl
tests/fixtures/benchmark/corpus/: sample-faq-001.md  sample-policy-001.md
tests/fixtures/fail/: root.md
tests/fixtures/fail/nested/: details.md
tests/fixtures/safe/: readme.md
tests/fixtures/warning/: notes.md
